--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
       </nav>
       
       <div class="container ban">
-        <div class="one row"><img src="img/banner-1.png" alt=""></div>
+        <div class="one row"><img id="one" src="img/banner-1.png" alt=""></div>
         <div class="two">
           <div class="sub row">
             <img src="img/banner-2.png" alt="">
