--- a/index.html
+++ b/index.html
@@ -67,12 +67,14 @@
         </div>
       </div>
       <div class="gap"></div>
+      <div class="in">
       <div class="secu container">
         <div class="con"><div class="col-1 "><img id="po"src="img/ship.png" alt=""></div><div class="col-2 "><p>FREE DELIVERY <br>when ordered over 500rs</p></div></div>
         <div class="con"><div class="col-1  cc"><img id="po"src="img/ship.png" alt=""></div><div class="col-2 "><p>Free Return <br>Get Return within 30 days</p></div></div>
         <div class="con"><div class="col-1 cc"><img id="po"src="img/ship.png" alt=""></div><div class="col-2  TO"><p>Secure Payment<br>100% Secure Online Payment</p></div></div>
         <div class="con"><div class="col-1 cc "><img id="po"src="img/ship.png" alt=""></div><div class="col-2   TO"><p>Best Quality <br>Original Product Guarenteed</p></div></div>
         </div>
+      </div>
     </div>
 </body>
 </html>
