--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Document</title>
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <script src="js/bootstrap.bundle.min.js"></script>
 </head>
 <body>
@@ -74,6 +75,50 @@
         <div class="con"><div class="col-1 cc"><img id="po"src="img/ship.png" alt=""></div><div class="col-2  TO"><p>Secure Payment<br>100% Secure Online Payment</p></div></div>
         <div class="con"><div class="col-1 cc "><img id="po"src="img/ship.png" alt=""></div><div class="col-2   TO"><p>Best Quality <br>Original Product Guarenteed</p></div></div>
         </div>
+      </div>
+      <h2 style="margin: 50px 0 0 50px;">Gamers World</h2>
+      <div class="shop" >
+        <div class="back" style="margin: 20px 0 0 50px;"> <div id="a"><a  id="a"style="text-decoration: none; color: black;margin-left:30px;" href="">xiaome </a><br>
+        <a id="a" style="text-decoration: none; color: black;margin-left:30px;" href="">apple </a><br>
+        <a  id="a"style="text-decoration: none; color: black;margin-left:30px;" href="">google</a> <br>
+        <a id="a"style="text-decoration: none; color: black;margin-left :30px;" href="">samsung</a></div></div>
+        <div class="card">
+          <img src="img/card1.webp" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h6 class="card-title"><span class="fa fa-star checked"></span>
+              <span class="fa fa-star checked"></span>
+              <span class="fa fa-star checked"></span>
+              <span class="fa fa-star"></span>
+              <span class="fa fa-star"></span></h6>
+            <p class="card-text">Xoggle aute et pariatur adipisicing nostrud et</p>
+            <p class="card-text">289$</p>
+          </div>
+        </div>
+        <div class="card">
+          <img src="img/c2.jpg" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h6 class="card-title"><span class="fa fa-star checked"></span>
+              <span class="fa fa-star checked"></span>
+              <span class="fa fa-star checked"></span>
+              <span class="fa fa-star checked"></span>
+              <span class="fa fa-star"></span></h6>
+            <p class="card-text">Xoggle aute et pariatur adipisicing nostrud et</p>
+            <p class="card-text">289$</p>
+          </div>
+        </div>
+        <div class="card ml">
+          <img src="img/c3.jpg" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h6 class="card-title"><span class="fa fa-star checked"></span>
+              <span class="fa fa-star checked"></span>
+              <span class="fa fa-star checked"></span>
+              <span class="fa fa-star checked"></span>
+              <span class="fa fa-star checked"></span></h6>
+            <p class="card-text">Xoggle aute et pariatur adipisicing nostrud et</p>
+            <p class="card-text">289$</p>
+          </div>
+        </div>
+      </div>
       </div>
     </div>
 </body>
