--- a/index.html
+++ b/index.html
@@ -119,7 +119,16 @@
           </div>
         </div>
       </div>
-      </div>
     </div>
+  <h2 id="sib" style="margin: 30px 0 0 50px;">Shop in Brands</h2>
+  <div class="sib">
+   <div class="plus"> <img id="bimg bro"src="img/brand-1.webp" alt=""></div>
+  <div><img id="bimg"src="img/brand-2.webp" alt=""></div>
+<div><img id="bimg"src="img/brand-3.webp" alt=""></div>
+<div><img id="bimg" src="img/brand-4.webp" alt=""></div>
+<div><img id="bimg"src="img/brand-5.webp" alt=""></div>
+    <div><img id="bimg"src="img/brand-6.webp" alt=""></div>
+  </div>
+  </div>
 </body>
 </html>
