--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
         <a id="a" style="text-decoration: none; color: black;margin-left:30px;" href="">apple </a><br>
         <a  id="a"style="text-decoration: none; color: black;margin-left:30px;" href="">google</a> <br>
         <a id="a"style="text-decoration: none; color: black;margin-left :30px;" href="">samsung</a></div></div>
-        <div class="card">
+        <div class="card pro">
           <img src="img/card1.webp" class="card-img-top" alt="...">
           <div class="card-body">
             <h6 class="card-title"><span class="fa fa-star checked"></span>
@@ -94,7 +94,7 @@
             <p class="card-text">289$</p>
           </div>
         </div>
-        <div class="card">
+        <div class="card  pro">
           <img src="img/c2.jpg" class="card-img-top" alt="...">
           <div class="card-body">
             <h6 class="card-title"><span class="fa fa-star checked"></span>
@@ -106,7 +106,7 @@
             <p class="card-text">289$</p>
           </div>
         </div>
-        <div class="card ml">
+        <div class="card ml pro">
           <img src="img/c3.jpg" class="card-img-top" alt="...">
           <div class="card-body">
             <h6 class="card-title"><span class="fa fa-star checked"></span>
@@ -128,6 +128,83 @@
 <div><img id="bimg" src="img/brand-4.webp" alt=""></div>
 <div><img id="bimg"src="img/brand-5.webp" alt=""></div>
     <div><img id="bimg"src="img/brand-6.webp" alt=""></div>
+  </div>
+  <h2 style="margin: 30px 0 0 50px;">Top Selling Products</h2>
+  <div class="sell">
+    <div class="card mb-3 noob " >
+      <div class="row g-0">
+        <div class="col-md-4">
+          <img src="img/product-img-4.jpg" class="img-fluid rounded-start" alt="...">
+        </div>
+        <div class="col-md-8">
+          <div class="card-body">
+            <h6 class="card-title"><span class="fa fa-star checked"></span>
+              <span class="fa fa-star checked"></span>
+              <span class="fa fa-star checked"></span>
+              <span class="fa fa-star checked"></span>
+              <span class="fa fa-star checked"></span></h6>
+            <p class="card-text">Senmei ipsum dolore eiusmod dolor officia do nisi</p>
+            <button class="card-text but">add to cart</button>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="card mb-3 noob" style="max-width: 540px;">
+      <div class="row g-0">
+        <div class="col-md-4 ">
+          <img src="img/product-img-5.jpg" class="img-fluid rounded-start pl prod" alt="...">
+        </div>
+        <div class="col-md-8">
+          <div class="card-body">
+            <h6 class="card-title"><span class="fa fa-star checked"></span>
+              <span class="fa fa-star checked"></span>
+              <span class="fa fa-star checked"></span>
+              <span class="fa fa-star checked"></span>
+              <span class="fa fa-star checked"></span></h6>
+            <p class="card-text">Senmei ipsum dolore eiusmod dolor officia do nisi</p>
+            <button class="card-text but">add to cart</button>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="seal">
+    <div class="card mb-3 noob" style="max-width: 540px;">
+      <div class="row g-0">
+        <div class="col-md-4 ">
+          <img src="img/product-img-6.jpg" class="img-fluid rounded-start prod" alt="...">
+        </div>
+        <div class="col-md-8">
+          <div class="card-body">
+            <h6 class="card-title"><span class="fa fa-star checked"></span>
+              <span class="fa fa-star checked"></span>
+              <span class="fa fa-star checked"></span>
+              <span class="fa fa-star checked"></span>
+              <span class="fa fa-star checked"></span></h6>
+            <p class="card-text">Senmei ipsum dolore eiusmod dolor officia do nisi</p>
+            <button class="card-text but">add to cart</button>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="card mb-3 noob" style="max-width: 540px;">
+      <div class="row g-0">
+        <div class="col-md-4 ">
+          <img src="img/product-img-7.jpg" class="img-fluid rounded-start prod" alt="...">
+        </div>
+        <div class="col-md-8">
+          <div class="card-body">
+            <h6 class="card-title"><span class="fa fa-star checked"></span>
+              <span class="fa fa-star checked"></span>
+              <span class="fa fa-star checked"></span>
+              <span class="fa fa-star checked"></span>
+              <span class="fa fa-star checked"></span></h6>
+            <p class="card-text">Senmei ipsum dolore eiusmod dolor officia do nisi</p>
+            <button class="card-text but">add to cart</button>
+          </div>
+        </div>
+      </div>
+    </div>
   </div>
   </div>
 </body>
