--- a/index.html
+++ b/index.html
@@ -206,6 +206,174 @@
       </div>
     </div>
   </div>
+  <h2 style="margin:30px 0 0 50px;"> Popular Sales</h2>
+  <div class="shop" >
+    <div class="back front" style="margin: 20px 0 0 50px;"> <div id="a" id="b"><a  id="a"style="text-decoration: none; color: black;margin-left:30px;" href="">xiaome </a><br>
+    <a id="a" style="text-decoration: none; color: black;margin-left:30px;" href="">apple </a><br>
+    <a  id="a"style="text-decoration: none; color: black;margin-left:30px;" href="">google</a> <br>
+    <a id="a"style="text-decoration: none; color: black;margin-left :30px;" href="">samsung</a></div></div>
+    <div class="card pro">
+      <img src="img/e2.webp" class="card-img-top" alt="...">
+      <div class="card-body">
+        <h6 class="card-title"><span class="fa fa-star checked"></span>
+          <span class="fa fa-star checked"></span>
+          <span class="fa fa-star checked"></span>
+          <span class="fa fa-star"></span>
+          <span class="fa fa-star"></span></h6>
+        <p class="card-text">Xoggle aute et pariatur adipisicing nostrud et</p>
+        <p class="card-text">289$</p>
+      </div>
+    </div>
+    <div class="card  pro">
+      <img src="img/e3.webp" class="card-img-top" alt="...">
+      <div class="card-body">
+        <h6 class="card-title"><span class="fa fa-star checked"></span>
+          <span class="fa fa-star checked"></span>
+          <span class="fa fa-star checked"></span>
+          <span class="fa fa-star checked"></span>
+          <span class="fa fa-star"></span></h6>
+        <p class="card-text">Xoggle aute et pariatur adipisicing nostrud et</p>
+        <p class="card-text">289$</p>
+      </div>
+    </div>
+    <div class="card ml pro">
+      <img src="img/e4.webp" class="card-img-top three" alt="...">
+      <div class="card-body">
+        <h6 class="card-title"><span class="fa fa-star checked"></span>
+          <span class="fa fa-star checked"></span>
+          <span class="fa fa-star checked"></span>
+          <span class="fa fa-star checked"></span>
+          <span class="fa fa-star checked"></span></h6>
+        <p class="card-text">Xoggle aute et pariatur adipisicing nostrud et</p>
+        <p class="card-text">289$</p>
+      </div>
+    </div>
   </div>
+</div>
+<div class="entert"><img id="entert"src="img/ads-1.webp" alt=""></div>
+<h2 id="new"style="margin: 40px 0 0 50px;">New Arrivels</h2>
+<div class="new">
+  <div class="card pro nro">
+    <img src="img/card1.webp" class="card-img-top" alt="...">
+    <div class="card-body">
+      <h6 class="card-title"><span class="fa fa-star checked"></span>
+        <span class="fa fa-star checked"></span>
+        <span class="fa fa-star checked"></span>
+        <span class="fa fa-star"></span>
+        <span class="fa fa-star"></span></h6>
+      <p class="card-text">Xoggle aute et pariatur adipisicing nostrud et</p>
+      <p class="card-text">289$</p>
+    </div>
+  </div>
+  <div class="card  pro">
+    <img src="img/c2.jpg" class="card-img-top" alt="...">
+    <div class="card-body">
+      <h6 class="card-title"><span class="fa fa-star checked"></span>
+        <span class="fa fa-star checked"></span>
+        <span class="fa fa-star checked"></span>
+        <span class="fa fa-star checked"></span>
+        <span class="fa fa-star"></span></h6>
+      <p class="card-text">Xoggle aute et pariatur adipisicing nostrud et</p>
+      <p class="card-text">289$</p>
+    </div>
+  </div>
+  <div class="card ml pro">
+    <img src="img/c3.jpg" class="card-img-top" alt="...">
+    <div class="card-body">
+      <h6 class="card-title"><span class="fa fa-star checked"></span>
+        <span class="fa fa-star checked"></span>
+        <span class="fa fa-star checked"></span>
+        <span class="fa fa-star checked"></span>
+        <span class="fa fa-star checked"></span></h6>
+      <p class="card-text">Xoggle aute et pariatur adipisicing nostrud et</p>
+      <p class="card-text">289$</p>
+    </div>
+  </div>
+  <div class="card ml pro">
+    <img src="img/product-img-5.jpg" class="card-img-top" alt="...">
+    <div class="card-body">
+      <h6 class="card-title"><span class="fa fa-star checked"></span>
+        <span class="fa fa-star checked"></span>
+        <span class="fa fa-star checked"></span>
+        <span class="fa fa-star checked"></span>
+        <span class="fa fa-star checked"></span></h6>
+      <p class="card-text">Xoggle aute et pariatur adipisicing nostrud et</p>
+      <p class="card-text">289$</p>
+    </div>
+  </div>
+</div>
+<div class="new">
+  <div class="card pro">
+    <img src="img/n1.webp" class="card-img-top" alt="...">
+    <div class="card-body">
+      <h6 class="card-title"><span class="fa fa-star checked"></span>
+        <span class="fa fa-star checked"></span>
+        <span class="fa fa-star checked"></span>
+        <span class="fa fa-star"></span>
+        <span class="fa fa-star"></span></h6>
+      <p class="card-text">Xoggle aute et pariatur adipisicing nostrud et</p>
+      <p class="card-text">289$</p>
+    </div>
+  </div>
+  <div class="card  pro">
+    <img src="img/n3.webp" class="card-img-top" alt="...">
+    <div class="card-body">
+      <h6 class="card-title"><span class="fa fa-star checked"></span>
+        <span class="fa fa-star checked"></span>
+        <span class="fa fa-star checked"></span>
+        <span class="fa fa-star checked"></span>
+        <span class="fa fa-star"></span></h6>
+      <p class="card-text">Xoggle aute et pariatur adipisicing nostrud et</p>
+      <p class="card-text">289$</p>
+    </div>
+  </div>
+  <div class="card ml pro">
+    <img src="img/n2.webp" class="card-img-top" alt="...">
+    <div class="card-body">
+      <h6 class="card-title"><span class="fa fa-star checked"></span>
+        <span class="fa fa-star checked"></span>
+        <span class="fa fa-star checked"></span>
+        <span class="fa fa-star checked"></span>
+        <span class="fa fa-star checked"></span></h6>
+      <p class="card-text">Xoggle aute et pariatur adipisicing nostrud et</p>
+      <p class="card-text">289$</p>
+    </div>
+  </div>
+  <div class="card ml pro">
+    <img src="img/product-img-4.jpg" class="card-img-top" alt="...">
+    <div class="card-body">
+      <h6 class="card-title"><span class="fa fa-star checked"></span>
+        <span class="fa fa-star checked"></span>
+        <span class="fa fa-star checked"></span>
+        <span class="fa fa-star checked"></span>
+        <span class="fa fa-star checked"></span></h6>
+      <p class="card-text">Xoggle aute et pariatur adipisicing nostrud et</p>
+      <p class="card-text">289$</p>
+    </div>
+  </div>
+</div>
+</div>
+<div class="foter">
+  <img id="foter" src="img/foter.webp" alt="">
+</div>
+<div class="fot">
+  <img id="fot" src="img/logo.svg" alt="">
+</div>
+
+<footer>
+<div class="f"><h5>about us</h5>
+<p>We know there are a lot of threa developers our but we pride into a firm in the industry.</p></div>
+<div class="ff"><h5>Features</h5>
+<a href="">About Us</a><br>
+<a href="">Terms and Conditions</a><br>
+<a href="">Best Products</a></div>
+<div class="fff"><h5>General Links</h5>
+<a href="">blog</a><br><a href="">Tracking Order</a><br>
+<a href="">Become Seller</a></div>
+<div class="ffff"><h5>Helpful</h5>
+<a href="">Flash Sales</a><br><a href="">FAQ</a><br>
+<a href="">Support</a></div>
+</footer>
+</div>
 </body>
 </html>
